--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "@lma/vue-ganttastic",
-  "version": "2.3.2",
+  "version": "2.3.3",
   "description": "A simple and customizable Gantt chart component for Vue.js",
   "author": "Marko Zunic (@zunnzunn)",
   "scripts": {
     "publish": "npm publish",
+    "publish-patch": "npm run build && npm version patch -f && npm publish ",
+    "publish-minor": "npm run build && npm version minor -f && npm publish ",
+    "publish-major": "npm run build && npm version major -f && npm publish ",
     "unpublish": "npm unpublish @lma/vue-ganttastic -f",
     "dev": "vite",
     "build": "npm run build:types && npm run build:lib",
