--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lma/vue-ganttastic",
-  "version": "2.3.4",
+  "version": "2.3.5",
   "description": "A simple and customizable Gantt chart component for Vue.js",
   "author": "Marko Zunic (@zunnzunn)",
   "scripts": {
@@ -60,7 +60,6 @@
     "dayjs": "^1.11.5",
     "vue": "^3.2.40"
   },
-  "homepage": "https://zunnzunn.github.io/vue-ganttastic/",
   "keywords": [
     "gantt",
     "chart",
@@ -73,7 +72,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/zunnzunn/vue-ganttastic"
+    "url": "http://npm.lama.tomsk.ru/-/web/detail/@lma/vue-ganttastic"
   },
   "dependencies": {
     "@vueuse/core": "^9.1.1"
